--- a/ParkHere/app/src/main/AndroidManifest.xml
+++ b/ParkHere/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         </activity>
         <activity android:name=".ParkingSpotList"/>
         <activity android:name=".CreateParkingSpotListing"/>
+        <activity android:name=".ViewObjectInfo"/>
     </application>
 
 </manifest>
