--- a/ParkHere/app/src/main/AndroidManifest.xml
+++ b/ParkHere/app/src/main/AndroidManifest.xml
@@ -9,19 +9,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
-
-        </activity>
+        <activity android:name=".Controllers.MainActivity"></activity>
         <activity android:name=".ParkingSpotList" />
         <activity android:name=".CreateParkingSpotListing" />
         <activity android:name=".ViewObjectInfo" />
-        <activity android:name=".LoginActivity">
+        <activity android:name=".Controllers.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".Controllers.Navigation"></activity>
     </application>
 
 </manifest>
