--- a/ParkHere/app/src/main/AndroidManifest.xml
+++ b/ParkHere/app/src/main/AndroidManifest.xml
@@ -9,18 +9,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Controllers.MainActivity"></activity>
+        <activity android:name=".controllers.MainActivity" />
         <activity android:name=".ParkingSpotList" />
         <activity android:name=".CreateParkingSpotListing" />
         <activity android:name=".ViewObjectInfo" />
-        <activity android:name=".Controllers.LoginActivity">
+        <activity android:name=".controllers.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Controllers.Navigation"></activity>
+        <activity android:name=".controllers.Navigation"/>
     </application>
 
 </manifest>
