--- a/ParkHere/app/src/main/AndroidManifest.xml
+++ b/ParkHere/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".controllers.MainActivity" />
+        <activity
+            android:name=".controllers.MainActivity" />
         <activity android:name=".ParkingSpotList" />
         <activity android:name=".CreateParkingSpotListing" />
         <activity android:name=".ViewObjectInfo" />
@@ -20,7 +21,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".controllers.Navigation"/>
+        <activity android:name=".controllers.Navigation" />
     </application>
 
 </manifest>
