--- a/ParkHere/app/build.gradle
+++ b/ParkHere/app/build.gradle
@@ -26,12 +26,21 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
-
+    //firebase
     compile 'com.google.firebase:firebase-core:11.4.2'
+
+
     compile 'com.android.support:design:25.3.1'
     compile 'com.android.support:appcompat-v7:25.3.1'
+    //recycler views
+    compile 'com.android.support:cardview-v7:25.3.1'
+    compile 'com.android.support:recyclerview-v7:25.3.1'
+
+
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
 
+
+    //floating search view
     compile 'com.github.arimorty:floatingsearchview:2.1.1'
     testCompile 'junit:junit:4.12'
 }
