--- a/ParkHere/app/build.gradle
+++ b/ParkHere/app/build.gradle
@@ -26,8 +26,10 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
+    compile 'com.firebaseui:firebase-ui-database:3.0.0'
+    compile 'com.google.firebase:firebase-auth:11.4.2'
+    compile 'com.google.firebase:firebase-database:11.4.2'
 
-    compile 'com.google.firebase:firebase-core:11.4.2'
     compile 'com.android.support:design:25.3.1'
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
