--- a/ParkHere/app/build.gradle
+++ b/ParkHere/app/build.gradle
@@ -21,7 +21,7 @@ android {
 
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
@@ -34,13 +34,17 @@ dependencies {
     compile 'com.firebaseui:firebase-ui-database:3.0.0'
     compile 'com.google.firebase:firebase-auth:11.4.2'
     compile 'com.google.firebase:firebase-database:11.4.2'
+    //firebase
+    compile 'com.google.firebase:firebase-core:11.4.2'
     compile 'com.android.support:design:25.3.1'
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:cardview-v7:25.3.1'
     compile 'com.android.support:recyclerview-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    //floating search view
     compile 'com.github.arimorty:floatingsearchview:2.1.1'
     testCompile 'junit:junit:4.12'
+    compile 'com.google.android.gms:play-services:11.4.2'
 }
 
 
