--- a/ParkHere/app/build.gradle
+++ b/ParkHere/app/build.gradle
@@ -40,8 +40,12 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.github.arimorty:floatingsearchview:2.1.1'
+    compile 'de.hdodenhof:circleimageview:2.1.0'
+    compile 'com.github.bumptech.glide:glide:4.3.0'
     testCompile 'junit:junit:4.12'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.3.0'
 }
+
 
 
 
