--- a/ParkHere/build.gradle
+++ b/ParkHere/build.gradle
@@ -25,3 +25,12 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+ext {
+
+    supportLibVersion = "25.3.1"
+    runnerVersion = "1.0.0"
+    rulesVersion = "1.0.0"
+    espressoVersion = "3.0.0"
+}
+
