--- a/ParkHere/app/build.gradle
+++ b/ParkHere/app/build.gradle
@@ -15,10 +15,20 @@ android {
 
         multiDexEnabled true
     }
+    testOptions {
+        unitTests.all {
+            jacoco {
+                includeNoLocationClasses = true
+            }
+        }
+    }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+        debug {
+            testCoverageEnabled true
         }
     }
 }
@@ -51,6 +61,8 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:4.3.0'
     testCompile 'junit:junit:4.12'
 
+
+
     compile 'com.google.android.gms:play-services:11.4.2'
 
 
@@ -73,3 +85,23 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.3.0'
 }
 apply plugin: 'com.google.gms.google-services'
+apply plugin: "jacoco"
+
+task jacocoTestReport(type: JacocoReport, dependsOn: ['testDebugUnitTest', 'createDebugCoverageReport']) {
+
+    reports {
+        xml.enabled = true
+        html.enabled = true
+    }
+
+    def fileFilter = ['**/R.class', '**/R$*.class', '**/BuildConfig.*', '**/Manifest*.*', '**/*Test*.*', 'android/**/*.*']
+    def debugTree = fileTree(dir: "${buildDir}/intermediates/classes/debug", excludes: fileFilter)
+    def mainSrc = "${project.projectDir}/src/main/java"
+
+    sourceDirectories = files([mainSrc])
+    classDirectories = files([debugTree])
+    executionData = fileTree(dir: "$buildDir", includes: [
+            "jacoco/testDebugUnitTest.exec",
+            "outputs/code-coverage/connected/*coverage.ec"
+    ])
+}
