--- a/ParkHere/app/build.gradle
+++ b/ParkHere/app/build.gradle
@@ -45,43 +45,40 @@ dependencies {
     //recycler views
 
     //floating search view
+    //firebase
+    //floating search view
+    androidTestCompile('com.android.support.test:runner:0.5') {
+        exclude group: 'com.android.support'
+    }
+    androidTestCompile('com.android.support.test:rules:0.5') {
+        exclude group: 'com.android.support'
+    }
+    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2') {
+        exclude group: 'com.android.support'
+    }
+    androidTestCompile('com.android.support.test.espresso:espresso-contrib:2.2.2') {
+        exclude group: 'com.android.support'
+    }
+    androidTestCompile('com.android.support.test.espresso:espresso-intents:2.2.2') {
+        exclude group: 'com.android.support'
+    }
+
     compile 'com.firebaseui:firebase-ui-database:3.0.0'
     compile 'com.google.firebase:firebase-auth:11.4.2'
     compile 'com.google.firebase:firebase-database:11.4.2'
-    //firebase
+    compile 'com.google.firebase:firebase-storage:11.4.2'
     compile 'com.google.firebase:firebase-core:11.4.2'
+    compile 'com.firebaseui:firebase-ui-storage:0.6.0'
     compile 'com.android.support:design:25.3.1'
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:cardview-v7:25.3.1'
     compile 'com.android.support:recyclerview-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    //floating search view
     compile 'com.github.arimorty:floatingsearchview:2.1.1'
     compile 'de.hdodenhof:circleimageview:2.1.0'
-    compile 'com.github.bumptech.glide:glide:4.3.0'
-    testCompile 'junit:junit:4.12'
-
-
-
+    compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.google.android.gms:play-services:11.4.2'
-
-
-    androidTestCompile ('com.android.support.test:runner:0.5') {
-        exclude group: 'com.android.support'
-    }
-    androidTestCompile ('com.android.support.test:rules:0.5') {
-        exclude group: 'com.android.support'
-    }
-    androidTestCompile ('com.android.support.test.espresso:espresso-core:2.2.2') {
-        exclude group: 'com.android.support'
-    }
-    androidTestCompile ('com.android.support.test.espresso:espresso-contrib:2.2.2') {
-        exclude group: 'com.android.support'
-    }
-    androidTestCompile ('com.android.support.test.espresso:espresso-intents:2.2.2') {
-        exclude group: 'com.android.support'
-    }
-
+    testCompile 'junit:junit:4.12'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.3.0'
 }
 apply plugin: 'com.google.gms.google-services'
