Added the Post Information activity. Called when the user clicks on a post from the home list.

--- a/ParkHere/app/src/main/AndroidManifest.xml
+++ b/ParkHere/app/src/main/AndroidManifest.xml
@@ -39,7 +39,11 @@
             android:value="AIzaSyAGXlOk9q9UDaGoGh7_YcHQ-iG4a8_Kkns" />
 
         <activity android:name=".controllers.AddASpotActivity" />
-        <activity android:name=".controllers.AddAPlace"></activity>
+        <activity android:name=".controllers.AddAPlace" />
+        <activity
+            android:name=".controllers.PostInformationActivity"
+            android:label="@string/title_activity_post_information"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
