--- a/ParkHere/app/src/main/AndroidManifest.xml
+++ b/ParkHere/app/src/main/AndroidManifest.xml
@@ -43,6 +43,10 @@
         <activity
             android:name=".controllers.PostInformationActivity"
             android:label="@string/title_activity_post_information"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".controllers.BookingActivity"
+            android:label="@string/title_activity_booking"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
