--- a/ParkHere/app/src/main/AndroidManifest.xml
+++ b/ParkHere/app/src/main/AndroidManifest.xml
@@ -40,8 +40,7 @@
 
         <activity android:name=".controllers.AddASpotActivity" />
         <activity android:name=".controllers.AddAPlace" />
-<<<<<<< HEAD
-<<<<<<< HEAD
+
         <activity
             android:name=".controllers.PostInformationActivity"
             android:label="@string/title_activity_post_information"
@@ -49,15 +48,12 @@
         <activity
             android:name=".controllers.BookingActivity"
             android:label="@string/title_activity_booking"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
-=======
-        <activity android:name=".controllers.SpotDetailActivity"></activity>
->>>>>>> spot delete
-=======
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
+
         <activity android:name=".controllers.SpotDetailActivity" />
         <activity android:name=".controllers.PostDetailActivity" />
         <activity android:name=".controllers.AddPostActivity"></activity>
->>>>>>> post sumit POST done
     </application>
 
 </manifest>
