--- a/ParkHere/app/src/main/AndroidManifest.xml
+++ b/ParkHere/app/src/main/AndroidManifest.xml
@@ -13,17 +13,21 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".controllers.MainActivity" />
-        <activity android:name=".ParkingSpotList" />
-        <activity android:name=".CreateParkingSpotListing" />
-        <activity android:name=".ViewObjectInfo" />
-        <activity android:name=".controllers.LoginActivity">
+        <activity android:name=".controllers.LoginActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ParkingSpotList" />
+        <activity android:name=".CreateParkingSpotListing" />
+        <activity android:name=".ViewObjectInfo" />
+        <activity android:name=".controllers.MainActivity"/>
+
+        <activity android:name=".CommentView"/>
+        <activity android:name=".RateAndComment"/>
+
         <activity android:name=".controllers.Navigation" />
         <activity android:name=".controllers.ProfileActivity" />
         <activity android:name=".controllers.NotificationActivity" />
